--- a/TallerFinal/TallerFinal1/TallerFinal1.csproj
+++ b/TallerFinal/TallerFinal1/TallerFinal1.csproj
@@ -164,7 +164,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Clases\clsPeople.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\People.cs" />
+    <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
