--- a/TallerFinal/TallerFinal1Web/TallerFinal1Web.csproj
+++ b/TallerFinal/TallerFinal1Web/TallerFinal1Web.csproj
@@ -161,9 +161,11 @@
     <Content Include="Paginas\Pagina2.html" />
     <Content Include="Paginas\PaginaBase.html" />
     <Content Include="Paginas\People.html" />
+    <Content Include="Paginas\Scripts\CRUD\CRUD.js" />
     <Content Include="Paginas\Scripts\Menu.js" />
     <Content Include="Paginas\Scripts\Pagina1.js" />
     <Content Include="Paginas\Scripts\Pagina2.js" />
+    <Content Include="Paginas\Scripts\People.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
